# MockPedal-BLE

./: .gitignore  CMakeLists.txt
include/: ble_service.h  main_window.h  mock_device.h
resources/macos/: Info.plist
src/: ble_service.cpp  main.cpp  main_window.cpp  mock_device.cpp
